--- a/jack/final data project.Rmd
+++ b/jack/final data project.Rmd
@@ -59,9 +59,30 @@ sort(colSums(sapply(df[na.cols], is.na)), decreasing = TRUE)
 
 The electrical variable identifies the electrical system in the sold home. 2677 homes (91.52%) use Standard Circuit Breakers & Romex. Nominal Variable.
 
-```{r}
-summary(df$electrical)
+I decided to change the names of the electrical categories to shorter abbreviations.
 
+```{r}
+table(df$electrical)
+
+# shorten to SB
+index <- which(df$electrical == "SBrkr")
+df[index, 'electrical'] <- "SB"
+# shorten to FA
+index <- which(df$electrical == "FuseA")
+df[index, 'electrical'] <- "FA"
+# Shorten to FF
+index <- which(df$electrical == "FuseF")
+df[index, 'electrical'] <- "FF"
+# shorten to FP
+index <- which(df$electrical == "FuseP")
+df[index, 'electrical'] <- "FP"
+# shorten to M
+index <- which(df$electrical == "Mix")
+df[index, 'electrical'] <- "M"
+
+
+#New category names
+table(df$electrical)
 ```
 
 
@@ -76,12 +97,10 @@ As advised in the documentation for the originial project, I have dropped all ho
 
 # # First Floor Square Feet
 
-Continuous Variable, ranging from 334 to 3820, median = 1082, mean = 1155, not normally distributed
+Continuous Variable, ranging from 334 to 3820, median = 1082, mean = 1155
 
 ```{r}
 summary(df$x1st.flr.sf)
-hist(df$x1st.flr.sf)
-shapiro.test(df$x1st.flr.sf)
 ```
 
 # # Second Floor Square Feet
@@ -96,11 +115,13 @@ summary(df$x2nd.flr.sf)
 df$has.2nd.floor <- ifelse(df$x2nd.flr.sf > 0, 1, 0)
 df$has.2nd.floor <- as.factor(df$has.2nd.floor)
 summary(df$has.2nd.floor)
+
+#Percentage of houses that have 2 floors
 a <- df %>% filter(has.2nd.floor == 1)
 nrow(a) / nrow(df)
 
+#Checking neighborhood distribution of houses with 2 floors
 tall.houses <- df %>% group_by(neighborhood) %>% summarise(floors = mean(as.numeric(has.2nd.floor)))
-
 head(tall.houses)
 
 ```
@@ -124,17 +145,14 @@ wherelow
 
 # # Greater Living Area
 
-Continuous Variable, ranging from 334 to 3820, same as 1st floor square feet, median = 1441, mean = 1494
-As suspected, greater living area and sales price are highly correlated and linearly related
+Continuous Variable, ranging from 334 to 5642, same as 1st floor square feet, median = 1441, mean = 1494
 
-Table and graph show median above ground living areas by neighborhood
+I arranged by above ground living area from lowest to high and checked the head and tail to make sure everything made sense. The smallest homes have low room counts and few other features whereas the biggest homes have high room counts and many features.
 
 ```{r}
 summary(df$gr.liv.area)
-cor.test(df$gr.liv.area, df$saleprice)
-d <- df %>% group_by(neighborhood) %>% summarise(median_living_area = median(gr.liv.area))
-ggplot(d, aes(x = neighborhood, y = median_living_area)) + geom_bar(stat = "identity", fill = "red", col = "black") + coord_flip()
-ggplot(df, aes(x = gr.liv.area, y = saleprice)) + geom_point(alpha = 0.2) + geom_smooth(se = FALSE)
+head(df[order(df$gr.liv.area),] )
+tail(df[order(df$gr.liv.area),] )
 ```
 
 # # Bathrooms
@@ -148,14 +166,17 @@ Four discrete variables relating to bathroom numbers:
 The majority of homes do not have any half baths or basement full baths. Both bsmt.full.bath and bsmt.half.bath have two missing values. Both are the same two variables, homes 1342 and 1498. 1342 is missing 10 predictors, all related to the basement, giving no indication of whether or not they have a basement. 1498 has no basement as shown by other predictors, so I have given both missing variables a value of 0.  
 
 ```{r}
+
 bath.missing <- df %>% filter(is.na(bsmt.half.bath) | is.na(bsmt.full.bath))
 bath.missing
 
 df$bsmt.full.bath[which(is.na(df$bsmt.full.bath))] <- 0
 df$bsmt.half.bath[which(is.na(df$bsmt.half.bath))] <- 0
 
-summary(df$bsmt.full.bath)
-summary(df$bsmt.half.bath)
+table(df$bsmt.full.bath)
+table(df$bsmt.half.bath)
+table(df$full.bath)
+table(df$half.bath)
 ```
 
 
@@ -172,18 +193,22 @@ summary(df$total.bath)
 
 This discrete variable describes the number of bedrooms above ground level, ranging from 0 to 8 with a median of 3 and mean of 2.854.
 
-There are 8 homes with 0 bedrooms above ground level, but those 8 have between 3-6 total above ground rooms.
+There are 8 homes with 0 bedrooms above ground level, but those 8 have between 3-6 total above ground rooms. All but one have total.bsmt.sf near or greater than 1000 ft squared, indicating large basements, possibly with bedrooms. All but one also have no second floor. All have either one or two full baths in the basement and few other bathrooms. All have kitchens above ground. All have sale.type = WD and all but one sale.condition = Normal. Most have roughly equal total.bsmt.sf and gr.live.area.
 
 There is most likely collinearity between number of bedrooms and total number of rooms. A linear model of bedrooms on total rooms returns a p-value of essentially zero.
 
 ```{r}
-summary(df$bedroom.abvgr)
+table(df$bedroom.abvgr)
 bedless <- df %>% filter(bedroom.abvgr == 0) 
-nrow(bedless)
+bedless
+#Checking how many rooms are in each sale with 0 bedrooms
 bedless1 <- subset(bedless, select = c(x, totrms.abvgrd))
 bedless1
 
-library(VIF)
+#Comparing the basement area and above ground area of the homes with no above ground bedrooms
+area.compare <- subset(bedless, select = c(x, total.bsmt.sf, gr.liv.area))
+area.compare
+
 test_model <- lm(totrms.abvgrd ~ bedroom.abvgr, data = df)
 summary(test_model)
 ```
@@ -193,12 +218,16 @@ summary(test_model)
 
 Two kitchen variables:
   - kitchen.abvgr - number of kitchens above ground level, discrete
+    - Most homes (2796) have only 1 kitchen
   - kitchenqual - kitchen quality, five levels ranging from excellent to poor, ordinal
     - There are no NA values for kitchen quality
 
 ```{r}
-summary(df$kitchen.abvgr)
-summary(df$kitchen.qual)
+table(df$kitchen.abvgr)
+```
+
+```{r}
+table(df$kitchen.qual)
 df[(df$kitchen.abvgr > 0) & is.na(df$kitchen.qual), ]
 ```
 
@@ -206,8 +235,9 @@ df[(df$kitchen.abvgr > 0) & is.na(df$kitchen.qual), ]
 
 Discrete Variable ranging from 2 to 15, no missing values
 
+
 ```{r}
-summary(df$totrms.abvgrd)
+table(df$totrms.abvgrd)
 ```
 
 # # Functional
@@ -219,7 +249,7 @@ The functional variable is an ordinal variable that describes home functionality
 Rearranged the factors of functional to range from Salvage Only to Typical rather than be in alphabetical order
 
 ```{r}
-summary(df$functional)
+table(df$functional)
 df$functional <- factor(df$functional, levels = c("Sal", "Sev", "Maj2", "Maj1", "Mod", "Min2", "Min1", "Typ"))
 ```
 
@@ -228,19 +258,9 @@ df$functional <- factor(df$functional, levels = c("Sal", "Sev", "Maj2", "Maj1", 
 Two fireplace related variables:
   - fireplaces - number of fireplaces, discrete, no missing values, ranges 0 to 4
   - fireplaces.qu - Ordinal variable that ranges from Na - no fireplace, to Ex - Excellent
-    - Reordered the fireplaces.qu factor levels from NA to Excellent
+    - Changed NA in fireplace.qu to "No Fireplace"
     - 1422 homes are recorded as having no fireplace, but the label is NA
-    - 
-
-```{r}
-plot(df$fireplaces)
-plot(df$fireplace.qu)
-```
-
-```{r}
-summary(df$fireplaces)
-summary(df$fireplace.qu)
-```
+    
 
 ```{r}
 nrow(df[(df$fireplaces > 0) & is.na(df$fireplace.qu), ])
@@ -249,6 +269,11 @@ nrow(df[(df$fireplaces > 0) & is.na(df$fireplace.qu), ])
 ```{r}
 index.fire <- which(is.na(df$fireplace.qu))
 df[index.fire, 'fireplace.qu'] <- 'No Fireplace'
+```
+
+```{r}
+table(df$fireplaces)
+table(df$fireplace.qu)
 ```
 
 # # Garage Variables
@@ -270,48 +295,101 @@ There are seven total variables related to the homes's garage:
       - five levels from poor to excellent
       - NA for no garage
 
-
-```{r}
-summary(df$garage.type)
-summary(df$garage.yr.blt)
-summary(df$garage.finish)
-summary(df$garage.cars)
-summary(df$garage.area)
-summary(df$garage.qual)
-summary(df$garage.cond)
-```
-
-This code checks the the observations that are missing garage area and garage car capacity values. The code shows that same observation is missing both values, explaining those NA's, as well all garage values except for garage.type. 
-
-```{r}
-df[is.na(df$garage.area), ]
-df[is.na(df$garage.cars), ]
-```
-Observation 2237 is responsible for both of these missing values, but has a value for garage.type.
-
 Testing to see if any garage types that are NA have an area > 0 or cars > 0 to show that the NA is a missing value. The result is 0 observations that match this test. We can assume then that there are 157 homes without garages and each ordinal or nominal variable should have 157 NA's.
 ```{r}
 df[(is.na(df$garage.type) & df$garage.area > 0) | (is.na(df$garage.type) & df$garage.cars > 0) , ]
 ```
 
-After examining the rest of the garage variables, garage.finish is not missing any observations, garage.qual and garage.cond are both are missing one observation, and garage.yr.blt is missing 2 observations, one of which observations is missing all values. The value is observation 1357, which is missing garage.yr.blt, garage.finish, garage.qual, and garage.cond but has values for garage.type, garage.cars, and garage.area.
+
+This table examines garage.type. Simplifying the factor names.
 ```{r}
-df[(is.na(df$garage.yr.blt) & df$garage.area > 0) | (is.na(df$garage.yr.blt) & df$garage.cars > 0) , ]
-df[(is.na(df$garage.finish) & df$garage.area > 0) | (is.na(df$garage.finish) & df$garage.cars > 0) , ]
-df[(is.na(df$garage.qual) & df$garage.area > 0) | (is.na(df$garage.qual) & df$garage.cars > 0) , ]
-df[(is.na(df$garage.cond) & df$garage.area > 0) | (is.na(df$garage.cond) & df$garage.cars > 0) , ]
+table(as.factor(df$garage.type))
+# shorten to 2T
+index <- which(df$garage.type == "2Types")
+df[index, 'garage.type'] <- "2T"
+# shorten to A
+index <- which(df$garage.type == "Attchd")
+df[index, 'garage.type'] <- "A"
+# Shorten to BM
+index <- which(df$garage.type == "Basment")
+df[index, 'garage.type'] <- "BM"
+# shorten to BI
+index <- which(df$garage.type == "BuiltIn")
+df[index, 'garage.type'] <- "BI"
+# shorten to CP
+index <- which(df$garage.type == "CarPort")
+df[index, 'garage.type'] <- "CP"
+# Shorten to I
+index <- which(df$garage.type == "Detchd")
+df[index, 'garage.type'] <- "D"
+
+#New factor names
+table(as.factor(df$garage.type))
 ```
 
 ```{r}
+summary(df$garage.yr.blt)
+```
+
+As can be seen, garage year is missing 159 values and the maximum value is 2207, which is obviously an error as that year has yet to occur, unless of course they meant 2207 B.C. I filtered the data set to test for homes built later than 2010, which is the tail date of the data set. Only one observation has this error. As the home was built in 2006 and remodeled in 2007, we can assume that the garage was built in 2007 and an imput error occured.
+
+```{r}
+#Change garage year to integer for filtering
+df$garage.yr.blt <- as.numeric(df$garage.yr.blt)
+#Get all garage with a build year later than 2010
+future.garage <- df %>% filter(garage.yr.blt > 2010)
+future.garage
+#Only found one
+#Change value of garage year from 2207 to 2007
+df$garage.yr.blt[df$garage.yr.blt == "2207"] <- "2007"
+#Confirm results
+table(df$garage.yr.blt)
+```  
+
+```{r}
+summary(as.factor(df$garage.finish))
+df[is.na(df$garage.finish) & !is.na(df$garage.type), ]
+```
+
+This table shows that there are 157 NA's in garage.finish. I tested to see if any of the NA's are in garage.finish but not in garage.type. There are no such observations.
+
+
+```{r}
+summary(df$garage.cars)
+df %>% filter(is.na(garage.cars))
+```
+
+The single missing value of garage.cars is an observation that is missing all garage data.
+
+```{r}
+summary(df$garage.area)
+df %>% filter(is.na(garage.area))
+```
+
+As suspected, the same value missing garage.cars is missing garage.area.
+
+```{r}
+summary(as.factor(df$garage.qual))
+df %>% filter(is.na(garage.qual) & !is.na(garage.type))
+```
+This table examines garage quality. It has 158 missing values, when it should have 157. The code finds the observation that is missing garage quality but has a value for garage type, indicting that it is missing data and not "No Garage"
+
+```{r}
+summary(as.factor(df$garage.cond))
+```
+
+
+
+```{r}
 index.garage.type <- which(is.na(df$garage.type))
-df[index.garage.type, 'garage.type'] <- 'No Garage'
+df[index.garage.type, 'garage.type'] <- 'None'
 
 index.garage.finish <- which(is.na(df$garage.finish))
-df[index.garage.finish, 'garage.finish'] <- 'No Garage'
+df[index.garage.finish, 'garage.finish'] <- 'None'
 
 index.garage.qual <- which(is.na(df$garage.qual))
-df[index.garage.qual, 'garage.qual'] <- 'No Garage'
+df[index.garage.qual, 'garage.qual'] <- 'None'
 
 index.garage.cond <- which(is.na(df$garage.cond))
-df[index.garage.cond, 'garage.cond'] <- 'No Garage'
+df[index.garage.cond, 'garage.cond'] <- 'None'
 ```
